Incorporating Scheduler for LoyaltyUpgradeSchedulerConfig.java